Validacion personalizada "IfExists" implementada

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
 NotBlank.validation.text=es requerido
+IfExists.user.phone=tiene el valor de un numero exitente
+IfExists.order.name=tiene el valor de un pedido existente
