--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
 NotBlank.validation.text=es requerido
 IfExists.user.phone=tiene el valor de un numero exitente
 IfExists.order.name=tiene el valor de un pedido existente
+IfExists.product.name=tiene el valor de un producto existente
+IfExists.category.name=tiene el valor de una categoría existente
+Size.product.description=no debe tener un valor mayor a 140 caracteres
