Cambio de prueba

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,4 +4,4 @@ IfExists.order.name=tiene el valor de un pedido existente
 IfExists.product.name=tiene el valor de un producto existente
 IfExists.category.name=tiene el valor de una categoría existente
 Size.product.description=no debe tener un valor mayor a 140 caracteres
-NotEmpty.validation.list=tiene que tener minimo una categoria
+NotEmpty.validation.list=tiene que tener minimo una categoria en la lista
