New annotation validators created to decouple validations from controllers, and added controller advice

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
-NotBlank.validation.text=es requerido
-IfExists.user.phone=tiene el valor de un numero exitente
-IfExists.order.name=tiene el valor de un pedido existente
-IfExists.product.name=tiene el valor de un producto existente
-IfExists.category.name=tiene el valor de una categoría existente
-Size.product.description=no debe tener un valor mayor a 140 caracteres
-NotEmpty.validation.list=tiene que tener minimo una categoria en la lista
+NotBlank.validation.text=Es requerido
+IfExists.user.phone=Tiene un valor que ya esta en uso
+IfExists.order.name=Tiene un valor que ya esta en uso
+IfExists.validation=Tiene un valor que ya esta en uso
+IfExists.category.name=Tiene el valor de una categoría existente
+Size.product.description=No debe tener un valor mayor a 140 caracteres
+NotEmpty.validation.list=Tiene que tener minimo una categoria en la lista
