--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,5 @@
 NotBlank.validation.text=Es requerido
-IfExists.user.phone=Tiene un valor que ya esta en uso
-IfExists.order.name=Tiene un valor que ya esta en uso
-IfExists.validation=Tiene un valor que ya esta en uso
-IfExists.category.name=Tiene el valor de una categorÃ­a existente
+IfExists.validation=Tiene un valor que ya está en uso
+IfExists.category.name=Tiene el valor de una categoría existente
 Size.product.description=No debe tener un valor mayor a 140 caracteres
-NotEmpty.validation.list=Tiene que tener minimo una categoria en la lista
+NotEmpty.validation.list=Tiene que tener mínimo una categoría en la lista
