Fixed exception not found error in validations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 NotBlank.validation.text=Es requerido
-IfExists.validation=Tiene un valor que ya está en uso
+IfExists.validation=Tiene un valor que ya esta en uso
 IfExists.category.name=Tiene el valor de una categoría existente
 Size.product.description=No debe tener un valor mayor a 140 caracteres
 NotEmpty.validation.list=Tiene que tener mínimo una categoría en la lista
